@@ -3,6 +3,7 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- Added Solaris x86 USB printer support.
 	- The USB backend now reports both the ulpt and unlpt
 	  devices under *BSD.
 	- The "lpstat -o" command would truncate the
